clang/test/BSC/Negative/NullabilityCheck/nested_owned_struct/nested_owned_struct.cbs
// RUN: %clang_cc1 -nullability-check=all -verify %s

safe T *owned safe_malloc<T>(T t);
safe void safe_free(void *owned p);

owned struct B{
    public:
    int * owned p;
    ~B(B this){
        safe_free((void*owned)this.p);
    }
};

owned struct A{
    public:
    B b;
};

int main(){
    B b1={};// expected-error {{`b1.p` is a _Nonnull pointer and must be properly initialized.}}
    return 0;
}



